2013-05-06  Uwe Kindler <uwe_kindler@web.de>

	* src/can_lpc2xxx.c: Changed return code for message filter
	configuration to -ENOSPC if no filters are available to match
	documentation change.

2012-01-25  Bernard Fouché <bernard.fouche@kuantic.com>

	* Changes made to support CAN IO package update:
	* cdl/can_lpc2xxx.cdl: CYGOPT_DEVS_CAN_LPC2XXX_EXTENDED_CFG_KEYS
	replaced by CYG_IO_SET_CONFIG_CAN_RANGE_FILTER.
	* include/can_lpc2xxx.h: Commented out unused and not implemented
	things.
	* src/can_lpc2xxx.c: CYGNUM_CAN_EVENT_OVERRUN_RX_HW instead of
	CYGNUM_CAN_EVENT_OVERRUN_RX. CYGOPT_DEVS_CAN_LPC2XXX_EXTENDED_CFG_KEYS
	replaced by CYG_IO_SET_CONFIG_CAN_RANGE_FILTER. can_lpc2xxx.h not
	required any more. CYGNUM_CAN_MODE_LISTEN_ONLY_ENTER &
	CYGNUM_CAN_MODE_LISTEN_ONLY_EXIT return -EINVAL.
	[ Bugzilla 1001453 ]

2008-07-21  Uwe Kindler <uwe_kindler@web.de>
	
	* cdl/can_lpc2xxx.cdl: Added CYGOPT_DEVS_CAN_LPC2XXX_ALIE to make 
	arbitration lost interrupt optional. Added option
	CYGNUM_DEVS_CAN_LPC2XXX_INT_PRIORITY to configure the interrupt
	priority for global CAN interrupt in LPC24xx variants.
	
	* include/can_lpc2xxx_baudrates.h: Replaced CYGNUM_CAN_LPC2XXX_VPB_CLK
	by CYGNUM_HAL_ARM_LPC2XXX_CAN_CLK because newer variants like LPC24xx
	do not have a global VPB_CLK.
	
	* src/can_accfilt_lpc2xxx.c: Adjusted LPC2XXX_CAN_FIRST_IN_LUT to
	be 0 for LPC24xxx variants. Added macro CAN_CHAN_NO_LUT(_info_) to
	abstract channel numbering from acceptance filter code.
	
	* src/can_lpc2xxx.c: Removed icr data field from lpc2xxx_can_info_st
	structure because it is not required any longer. A lot of small
	modifications to make the driver usable with newer LPC2xxx variants like
	LPC24xx. ISR and DSR code changed - instead of disabling interrupts in 
	IER register they are disabled in VIC by using cyg_drv_interrupt_mask()
	function calls. Added global CAN ISR and DSR for LPC24xx variants 
	(they do not support individual interrupt vectors for RX and TX